# flights-de-project

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
ingestion/: fetch_flights.py
notebooks/: fetch_flights.ipynb
pipelines/: flights_pipeline.py
src/common/: logger.py  storage.py
src/ingestion/: fetch_flights.py
src/pipelines/: flights_pipeline.py
src/transformations/: transform_flights.py
transformations/: transform_flights.py
